--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encouragement for My Girlfriend</title>
+    <title>Semangat BUBUBB!!</title>
     <style>
         body {
-            background-image: url('path/to/your/background/image.jpg');
+            background-image: url('https://drive.google.com/file/d/1VK6uShpu7kbYOcCQBAsvp79MDeCfUN8j/view?usp=drive_link');
             background-size: cover;
             background-position: center;
             font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
     <h1>Semangat bubub ku besok sidangnya!</h1>
     <p>You've got this!</p>
     <audio controls autoplay loop>
-        <source src="path/to/your/audio/background_music.mp3" type="audio/mp3">
+        <source src=url('https://drive.google.com/file/d/1ac21avIrrDSArfKznyNavO1UZCVgkCbh/view?usp=drive_link' type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 </body>
